deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      securityContext:
        runAsUser: 10000
        runAsNonRoot: true
      containers:
        - name: todo-app
          # do not use latest in production
          image: gbaeke/dotnetdemo:1.0.0
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP          
          resources:
              requests:
                memory: "64Mi"
                cpu: "50m"
              limits:
                memory: "64Mi"
                cpu: "50m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
              httpGet:
                path: /readyz
                port: 8080
              initialDelaySeconds: 15
              periodSeconds: 5
