deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: http
