deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
  labels:
    name: todo-app
spec:
  rules:
  - host: todo.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-app
            port: 
              number: 80
